--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5290,3 +5290,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-23
+  taskId: 57227361
+  timeCreate: Mon Nov 27 17:24:28 2023
+  timeStart: Mon Nov 27 17:47:01 2023
+  timeFinish: Mon Nov 27 17:56:08 2023
+  timeWait: 22 mins
+  timeBuild: 9 mins
+  timeTotal: 31 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-42
+  taskId: 57228183
+  timeCreate: Mon Nov 27 17:47:37 2023
+  timeStart: Mon Nov 27 18:02:10 2023
+  timeFinish: Mon Nov 27 18:09:50 2023
+  timeWait: 14 mins
+  timeBuild: 7 mins
+  timeTotal: 22 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-106
+  taskId: 57229503
+  timeCreate: Mon Nov 27 18:32:26 2023
+  timeStart: Mon Nov 27 18:33:09 2023
+  timeFinish: Mon Nov 27 18:36:58 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
