--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4291,3 +4291,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-92
+  taskId: 57260463
+  timeCreate: Wed Nov 29 00:47:24 2023
+  timeStart: Wed Nov 29 00:48:06 2023
+  timeFinish: Wed Nov 29 00:55:35 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-223
+  taskId: 57260875
+  timeCreate: Wed Nov 29 01:04:48 2023
+  timeStart: Wed Nov 29 01:05:17 2023
+  timeFinish: Wed Nov 29 01:09:33 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
