--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5434,3 +5434,30 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-34
+  taskId: 57269142
+  timeCreate: Wed Nov 29 03:16:13 2023
+  timeStart: Wed Nov 29 03:16:53 2023
+  timeFinish: Wed Nov 29 03:42:34 2023
+  timeWait: 0 mins
+  timeBuild: 25 mins
+  timeTotal: 26 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-25
+  taskId: 57269227
+  timeCreate: Wed Nov 29 03:37:00 2023
+  timeStart: Wed Nov 29 03:37:34 2023
+  timeFinish: Wed Nov 29 03:46:06 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-112
+  taskId: 57269403
+  timeCreate: Wed Nov 29 03:53:02 2023
+  timeStart: Wed Nov 29 03:53:03 2023
+  timeFinish: Wed Nov 29 03:56:38 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
