--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5461,3 +5461,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-35
+  taskId: 57274258
+  timeCreate: Wed Nov 29 07:37:40 2023
+  timeStart: Wed Nov 29 07:38:10 2023
+  timeFinish: Wed Nov 29 08:01:53 2023
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 24 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-113
+  taskId: 57275042
+  timeCreate: Wed Nov 29 08:11:12 2023
+  timeStart: Wed Nov 29 08:11:49 2023
+  timeFinish: Wed Nov 29 08:15:24 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
