--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5479,3 +5479,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-36
+  taskId: 57275797
+  timeCreate: Wed Nov 29 13:36:15 2023
+  timeStart: Wed Nov 29 13:36:18 2023
+  timeFinish: Wed Nov 29 13:59:05 2023
+  timeWait: 0 mins
+  timeBuild: 22 mins
+  timeTotal: 22 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-114
+  taskId: 57276758
+  timeCreate: Wed Nov 29 14:09:33 2023
+  timeStart: Wed Nov 29 14:09:38 2023
+  timeFinish: Wed Nov 29 14:13:26 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
