--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5506,3 +5506,21 @@
   timeWait: 0 mins
   timeBuild: 10 mins
   timeTotal: 10 mins
+- name: devspaces-operator
+  tag: 3.11-14
+  taskId: 57281240
+  timeCreate: Wed Nov 29 11:08:19 2023
+  timeStart: Wed Nov 29 11:21:27 2023
+  timeFinish: Wed Nov 29 11:38:42 2023
+  timeWait: 13 mins
+  timeBuild: 17 mins
+  timeTotal: 30 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-115
+  taskId: 57281596
+  timeCreate: Wed Nov 29 11:30:10 2023
+  timeStart: Wed Nov 29 11:30:51 2023
+  timeFinish: Wed Nov 29 11:34:58 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
