--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5524,3 +5524,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.11-11
+  taskId: 57282753
+  timeCreate: Wed Nov 29 17:22:15 2023
+  timeStart: Wed Nov 29 17:22:42 2023
+  timeFinish: Wed Nov 29 17:28:12 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-116
+  taskId: 57283405
+  timeCreate: Wed Nov 29 17:50:41 2023
+  timeStart: Wed Nov 29 17:50:44 2023
+  timeFinish: Wed Nov 29 17:54:46 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
