--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5641,3 +5641,21 @@
   timeWait: 0 mins
   timeBuild: 26 mins
   timeTotal: 26 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-29
+  taskId: 57319052
+  timeCreate: Thu Nov 30 17:45:53 2023
+  timeStart: Thu Nov 30 17:47:05 2023
+  timeFinish: Thu Nov 30 17:54:57 2023
+  timeWait: 1 mins
+  timeBuild: 7 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-122
+  taskId: 57320723
+  timeCreate: Thu Nov 30 18:38:18 2023
+  timeStart: Thu Nov 30 18:38:21 2023
+  timeFinish: Thu Nov 30 18:41:32 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
