chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4336,3 +4336,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-226
+  taskId: 57342760
+  timeCreate: Fri Dec 1 20:20:05 2023
+  timeStart: Fri Dec 1 20:26:46 2023
+  timeFinish: Fri Dec 1 20:32:17 2023
+  timeWait: 6 mins
+  timeBuild: 5 mins
+  timeTotal: 12 mins
