chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5731,3 +5731,66 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.11-12
+  taskId: 57357440
+  timeCreate: Sun Dec 3 03:50:08 2023
+  timeStart: Sun Dec 3 03:50:18 2023
+  timeFinish: Sun Dec 3 03:55:27 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.11-8
+  taskId: 57357441
+  timeCreate: Sun Dec 3 03:50:36 2023
+  timeStart: Sun Dec 3 03:51:04 2023
+  timeFinish: Sun Dec 3 04:03:33 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.11-7
+  taskId: 57357442
+  timeCreate: Sun Dec 3 03:51:55 2023
+  timeStart: Sun Dec 3 03:52:36 2023
+  timeFinish: Sun Dec 3 04:02:47 2023
+  timeWait: 0 mins
+  timeBuild: 10 mins
+  timeTotal: 10 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-41
+  taskId: 57357444
+  timeCreate: Sun Dec 3 03:52:42 2023
+  timeStart: Sun Dec 3 03:53:23 2023
+  timeFinish: Sun Dec 3 04:14:54 2023
+  timeWait: 0 mins
+  timeBuild: 21 mins
+  timeTotal: 22 mins
+- name: devspaces-operator
+  tag: 3.11-16
+  taskId: 57357446
+  timeCreate: Sun Dec 3 03:53:38 2023
+  timeStart: Sun Dec 3 03:54:10 2023
+  timeFinish: Sun Dec 3 04:08:05 2023
+  timeWait: 0 mins
+  timeBuild: 13 mins
+  timeTotal: 14 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-20
+  taskId: 57357476
+  timeCreate: Sun Dec 3 04:04:58 2023
+  timeStart: Sun Dec 3 04:05:35 2023
+  timeFinish: Sun Dec 3 04:12:46 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-127
+  taskId: 57357483
+  timeCreate: Sun Dec 3 04:14:10 2023
+  timeStart: Sun Dec 3 04:14:42 2023
+  timeFinish: Sun Dec 3 04:17:52 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
