--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5875,6 +5875,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-48
+  taskId: 57368456
+  timeCreate: Mon Dec 4 08:47:13 2023
+  timeStart: Mon Dec 4 08:47:26 2023
+  timeFinish: Mon Dec 4 10:29:31 2023
+  timeWait: 0 mins
+  timeBuild: 102 mins
+  timeTotal: 102 mins
 - name: devspaces-dashboard-rhel8
   tag: 3.11-43
   taskId: 57368737
@@ -5893,3 +5902,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-21
+  taskId: 57369560
+  timeCreate: Mon Dec 4 10:17:18 2023
+  timeStart: Mon Dec 4 10:17:19 2023
+  timeFinish: Mon Dec 4 10:27:05 2023
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-133
+  taskId: 57370154
+  timeCreate: Mon Dec 4 10:43:59 2023
+  timeStart: Mon Dec 4 10:44:37 2023
+  timeFinish: Mon Dec 4 10:48:28 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
