--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4453,3 +4453,12 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-230
+  taskId: 57371567
+  timeCreate: Mon Dec 4 16:53:23 2023
+  timeStart: Mon Dec 4 16:53:49 2023
+  timeFinish: Mon Dec 4 16:57:14 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
