--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5938,3 +5938,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-22
+  taskId: 57374172
+  timeCreate: Mon Dec 4 19:07:00 2023
+  timeStart: Mon Dec 4 19:07:01 2023
+  timeFinish: Mon Dec 4 19:15:39 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-135
+  taskId: 57374608
+  timeCreate: Mon Dec 4 19:23:04 2023
+  timeStart: Mon Dec 4 19:23:19 2023
+  timeFinish: Mon Dec 4 19:27:02 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
