chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5956,6 +5956,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-49
+  taskId: 57376144
+  timeCreate: Mon Dec 4 17:00:25 2023
+  timeStart: Mon Dec 4 17:01:04 2023
+  timeFinish: Mon Dec 4 18:43:08 2023
+  timeWait: 0 mins
+  timeBuild: 102 mins
+  timeTotal: 102 mins
 - name: devspaces-devfileregistry-rhel8
   tag: 3.11-34
   taskId: 57376286
@@ -5974,3 +5983,12 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-137
+  taskId: 57376915
+  timeCreate: Mon Dec 4 19:06:39 2023
+  timeStart: Mon Dec 4 19:06:48 2023
+  timeFinish: Mon Dec 4 19:10:38 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
