--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5992,3 +5992,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-50
+  taskId: 57377939
+  timeCreate: Tue Dec 5 02:14:54 2023
+  timeStart: Tue Dec 5 02:15:34 2023
+  timeFinish: Tue Dec 5 03:52:53 2023
+  timeWait: 0 mins
+  timeBuild: 97 mins
+  timeTotal: 97 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-138
+  taskId: 57379653
+  timeCreate: Tue Dec 5 03:59:39 2023
+  timeStart: Tue Dec 5 04:00:25 2023
+  timeFinish: Tue Dec 5 04:04:15 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
