--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6064,3 +6064,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-idea-rhel8
+  tag: 3.11-6
+  taskId: 57409794
+  timeCreate: Wed Dec 6 09:41:52 2023
+  timeStart: Wed Dec 6 09:42:02 2023
+  timeFinish: Wed Dec 6 09:58:46 2023
+  timeWait: 0 mins
+  timeBuild: 16 mins
+  timeTotal: 16 mins
+- name: devspaces-operator
+  tag: 3.11-18
+  taskId: 57410312
+  timeCreate: Wed Dec 6 09:55:41 2023
+  timeStart: Wed Dec 6 10:08:51 2023
+  timeFinish: Wed Dec 6 10:26:23 2023
+  timeWait: 13 mins
+  timeBuild: 17 mins
+  timeTotal: 30 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-142
+  taskId: 57411130
+  timeCreate: Wed Dec 6 10:30:04 2023
+  timeStart: Wed Dec 6 10:30:19 2023
+  timeFinish: Wed Dec 6 10:34:33 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
