add che-openvsx tag into job-config.json

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -604,6 +604,12 @@
       "3.12": "0.21",
       "3.x": "0.21"
     },
+    "CHE_OPENVSX_TAG": {
+      "3.10": "che-openvsx",
+      "3.11": "che-openvsx-v0.14.1",
+      "3.12": "che-openvsx-v0.14.1",
+      "3.x": "che-openvsx-v0.14.1"
+    },
     "@eclipse-che/plugin-registry-generator": {
       "3.10": "7.76.0",
       "3.11": "7.78.0",
