--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6127,3 +6127,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-udi-rhel8
+  tag: 3.11-13
+  taskId: 57455149
+  timeCreate: Thu Dec 7 16:48:42 2023
+  timeStart: Fri Dec 8 01:51:37 2023
+  timeFinish: Fri Dec 8 02:48:45 2023
+  timeWait: 542 mins
+  timeBuild: 57 mins
+  timeTotal: 600 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-147
+  taskId: 57473037
+  timeCreate: Fri Dec 8 14:23:07 2023
+  timeStart: Fri Dec 8 14:23:18 2023
+  timeFinish: Fri Dec 8 14:26:39 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
